# ecma-llvm

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  STATS  ecma.ast  generate.sh  run_samples.sh  update_llvm.sh
cmake/: FindLLVM.cmake  FindLemon.cmake  FindRagel.cmake
compiler/: CMakeLists.txt  compiler.cpp  function.cpp  module.cpp
compiler/toolchain/: compiler.cpp
doc/: common.sty  compile-flow.dia  compile-flow.tex
doc/lib/: colors.sty  style.sty
ecmac/: CMakeLists.txt  main.cpp
frontend/: CMakeLists.txt  compile-flow.dia  main.cpp
frontend/frontend/: args.cpp
frontend/frontend/compile/: phase.cpp
frontend/frontend/input/: phase.cpp
frontend/frontend/output/: phase.cpp
frontend/frontend/parse/: phase.cpp
include/: config.cmake.h  config.h.in  ezOptionParser.hpp  llvm_ir.h
include/ecma/: llvm_ir.h
include/ecma/ast/: ast.h  expression.h  module.h  node.h  statement.h
include/ecma/ast/args/: arguments.h
include/ecma/ast/expr/: array.h  assign.h  assignment.h  binary.h  call.h  condition.h  conditional.h  expressions.h  extern.h  function.h  functioncall.h  ident.h  identifier.h  index.h  member.h  new.h  object.h  postfix.h  this.h  unary.h
include/ecma/ast/expr/func/: functionparam.h
include/ecma/ast/expr/literal/: boolean.h  double.h  function.h  function_call.h  identifier.h  integer.h  null.h  number.h  regex.h  regexp.h  string.h  undefined.h
include/ecma/ast/expr/object/: property.h
include/ecma/ast/stmt/: block.h  break.h  case.h  caseblock.h  casekey.h  catch.h  continue.h  debug.h  expression.h  expressionstmt.h  finally.h  for.h  forin.h  if.h  ifstatement.h  label.h  return.h  switch.h  throw.h  try.h  while.h  with.h
include/ecma/ast/stmt/ctrl/: break.h  case.h  caseblock.h  casekey.h  catch.h  continue.h  finally.h  for.h  forin.h  if.h  label.h  return.h  switch.h  throw.h  try.h  while.h  with.h
include/ecma/ast/stmt/decl/: function.h  var.h  variables.h  vars.h
include/ecma/ast/tools/: print_visitor.h  visitor.h
include/ecma/compiler/: compiler.h  function.h  module.h
include/ecma/compiler/helper/: call.h  null.h  type.h
include/ecma/frontend/: args.h  args_list.h  phase.h  phases.h  unit.h
include/ecma/frontend/compile/: phase.h
include/ecma/frontend/input/: phase.h
include/ecma/frontend/output/: phase.h
include/ecma/frontend/parse/: phase.h
include/ecma/lex/: exception.h  lexeme.h  lexer.h  token.h  types.h  types.tpl.h
include/ecma/parser/: error.h  exception.h  parser.h
include/ecma/parser/toolchain/: source.h
include/ecma/runtime/: capi.call.h  capi.def.h  capi.h  object.h  scope.h
include/ecma/runtime/type/: array.h  boolean.h  function.h  integer.h  null.h  string.h  undefined.h
include/ecma/runtime/types/: env.h  env_entry.h
include/ecma/toolchain/: compiler.h  source.h
include/ecma/utils/: element.h  messages.h
include/ecma/utils/ast/: pretty.h
include/llvmpp/: AbstractClass.h  Class.h  Object.h
include/llvmpp/helper/: call.h  null.h  type.h
llvmpp/: CMakeLists.txt
parser/: CMakeLists.txt  main.cpp  sample.cpp  sample.js  source.cpp
parser/ast/expr/literal/: number.cpp  regexp.cpp
parser/lex/: exception.cpp  lexeme.cpp  lexer.rl  lexer.tpl.rl  token.cpp
parser/parser/: error.cpp  exception.cpp  lemon-parser.lm  lemon-parser.tpl.lm  parser.cpp
parser/toolchain/: source.cpp
runtime/: CMakeLists.txt  scope.cpp
runtime/runtime/: capi.cpp  capi.extern.cpp  object.cpp
runtime/runtime/type/: array.cpp  boolean.cpp  function.cpp  integer.cpp  null.cpp  string.cpp  undefined.cpp
runtime/types/: env.cpp  env_entry.cpp
samples/: basic.js  basic.ll  basic.o.ll  basic.s  complex.js  complex.ll  simple.js  simple.ll
tests/: CMakeLists.txt  basic.js  basic.ll  basic.o.ll  basic.s  complex.ll  function.js  function.ll  runner.py  test_basic.h  test_parser.h
tests/compiler/: __init__.py
tests/compiler/success/: basic.js
tests/parser/: __init__.py
tests/parser/fail/: block_empty.js  obvious_fails.js
tests/parser/success/: array.js  array_elision.js  block.js  call.js  continue.js  function_decl.js  function_expr.js  if.js  iter_for.js  iter_forin.js  iter_while.js  native.js  new.js  object.js  ops.js  stmt_follow.js  switch.js  try.js  var_decls.js  with.js
tools/: ast.py  ast.yml  convert_svg_pdf.sh  gen.sh  genast.py  genheaders.py  gentree.py  genvisit.py  genvisitor.py  stats.sh
tools/zinc/: zinc.py
tools/zinc/ast/: __init__.py  ast.py  lexer.py  parser.py
tools/zinc/commands/: __init__.py  base.py  gen_ast.py  gen_lexer.py  gen_parser.py  gen_types.py
tools/zinc/core/: __init__.py  ast.py  lexer.py  parser.py  utils.py
utils/: CMakeLists.txt  messages.cpp
